# Seg_shell

./: .gitignore  PostProcessing.py  README.md  classes_datasets.py  config.py  demo.py  detection.py  predict.py  train.py  video.py
CPP/: CMakeLists.txt
CPP/Camera/: CMakeLists.txt
CPP/Camera/include/: Video.h
CPP/Camera/src/: Video.cpp
CPP/Detection/: CMakeLists.txt
CPP/Detection/include/: DetTrt.h  Det_onnx.h  Detection.h  PostProcess.h
CPP/Detection/src/: DetTrt.cpp  Detection.cpp
CPP/common/: CMakeLists.txt
CPP/common/include/: PostProcess.h
CPP/common/src/: PostProcess.cpp
CPP/demo/: CMakeLists.txt  demo.cpp  demo2.cpp
CPP/detection/: CMakeLists.txt
CPP/detection/include/: DarknetDet.h  Detect_manager.h
CPP/detection/src/: DarknetDet.cpp
CPP/model/: calibration_in_params2.yml  paoyuan_yolov4tiny.cfg
CPP/segmentation/: CMakeLists.txt
CPP/segmentation/include/: DetTrt.h  Det_onnx.h  Detection.h
CPP/segmentation/src/: DetTrt.cpp  Det_onnx.cpp  Detection.cpp
datasets/: dataaug.py  dataloader.py  dataset.py  voc_dataset.py
logs/: fcnlog  feature
losses/: losses.py  lovasz_losses.py
model/: BiSeNet.py  FCN.py  FCN8S.py  Unet.py  Unetpp.py  deeplabv3Plus.py  export_model.py  shuffBiseNet.py
model/backbone/: CSPdarknet53_tiny.py  VGG.py  backbonetest.py  efnet.py  resnet.py
model/backbone/.ipynb_checkpoints/: resnet-checkpoint.py
test/: image_label_check.py
tool/: export_onnx.py  labelme2voc.py
utils/: calculat_features.py  make_list.py  metrics.py  ohem_celoss.py  utils.py
